Adicionado elementos CSS desktop

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="sedans-type">
                 <div class="conteudo-sedans">
                     <img src="images/icon-sedans.svg">
-                    <h1>Sedans</h1>
+                    <div class="titulo"><h1>Sedans</h1></div>
                     <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
                         or on your next road trip.</p>
                 </div>
