--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <div class="sedans-type">
                 <div class="conteudo-sedans">
                     <img src="images/icon-sedans.svg">
-                    <div class="titulo"><h1>Sedans</h1></div>
+                    <div class="titulo">
+                        <h1>Sedans</h1>
+                    </div>
                     <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
                         or on your next road trip.</p>
                 </div>
-                <div class="sedan-button">
-                    <p>Learn More</p>
-                </div>
+                <a href="#">Learn More</a>
             </div>
             <div class="suvs-type">
                 <div class="conteudo-suvs">
@@ -30,9 +30,7 @@
                         vacation
                         and off-road adventures.</p>
                 </div>
-                <div class="suvs-button">
-                    <p>Learn More</p>
-                </div>
+                <a href="#">Learn More</a>
             </div>
             <div class="luxury-type">
                 <div class="conteudo-luxury">
@@ -41,9 +39,7 @@
                     <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
                         rental and arrive in style.</p>
                 </div>
-                <div class="luxury-button">
-                    <p>Learn More</p>
-                </div>
+                <a href="#">Learn More</a>
             </div>
         </div>
     </main>
